<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/bannerImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/white"
            android:contentDescription="@string/apartment_image"
            android:scaleType="centerCrop"
            android:src="@drawable/home_banner" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/property"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dimen10"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:drawableTop="@drawable/ic_property"
                            android:padding="@dimen/dimen10"
                            android:text="@string/my_property"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/black" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/helpdesk"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dimen10"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_helpdesk"
                            android:padding="@dimen/dimen10"
                            android:text="@string/helpdesk"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/black" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/visitors"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dimen10"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_visitors"
                            android:padding="@dimen/dimen10"
                            android:text="@string/visitors"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/black" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/accounts"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dimen10"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_accounts"
                            android:padding="@dimen/dimen10"
                            android:text="@string/my_accounts"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/black" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/events"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dimen10"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_events"
                            android:padding="@dimen/dimen10"
                            android:text="@string/events"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/black" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/facilities"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/dimen10"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableTop="@drawable/ic_facilities"
                            android:padding="@dimen/dimen10"
                            android:text="@string/facilities"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@color/black" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>